# async-crud-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test-results.json
.claude/: settings.json
.claude/implementation/: shell-extension-plan.md
.claude/sprint/: .orchestration-state.json  config.json  queue.json
.claude/sprint/stories/: 1-add-programdata-fallback-path-to-daemon-logs-comma.md  15-persistence-layer.md  (+25 more)
docs/: PRD.md
scripts/: bootstrap_uv.py  build_installer.py  configure_claude_code.py  installer.py  setup.bat  setup.sh  test_server.py  uninstaller.py
src/async_crud_mcp/: __init__.py  __main__.py  config.py  server.py
tests/: test_audit_logger.py  test_background_tasks.py  test_config.py  test_content_scanner.py  test_daemon_circuit_breaker.py  test_daemon_lazy_import.py  test_daemon_paths.py  test_diff_engine.py  test_file_io.py  test_file_watcher.py  test_lock_manager.py  test_path_validator.py  test_persistence.py  test_server.py  test_shell_provider.py  test_shell_validator.py
tests/test_cli/: test_bootstrap_cmd.py  test_config_cmd.py  test_daemon_cmd.py  test_install_cmd.py  test_setup_cmd.py
tests/test_scripts/: test_configure_claude_code.py  test_installer.py  test_test_server.py  test_uninstaller.py
tests/test_tools/: test_async_append.py  test_async_batch_read.py  test_async_batch_update.py  test_async_batch_write.py  test_async_delete.py  test_async_exec.py  test_async_list.py  test_async_read.py  test_async_rename.py  test_async_search.py  test_async_status.py  test_async_update.py  test_async_wait.py  test_async_write.py
(+317 files in other folders)
