[project]
name = "async-crud-mcp"
version = "0.1.0"
description = "Async CRUD operations MCP server with daemon service and file watcher support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "async-crud-mcp contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "loguru>=0.7",
    "tenacity>=8.0",
    "httpx>=0.24",
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    "pywin32>=306; sys_platform=='win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "psutil>=5.9",
]

[project.scripts]
async-crud-mcp = "async_crud_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_crud_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
